<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_welcome">Dicoding Story App</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="title_register">Lengkapi data diri dibawah ini</string>
    <string name="name">Nama</string>
    <string name="email">Alamat Email</string>
    <string name="password">Kata Sandi</string>
    <string name="title_login">Yuk Login</string>
    <string name="email_hint">Masukkan email</string>
    <string name="name_hint">Masukkan nama</string>
    <string name="message_main">Selamat datang di Dicoding Story</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="user">Nama</string>
    <string name="desc">Deskripsi</string>
    <string name="create_button">Tombol Buat</string>
    <string name="succes_signup">Akun berhasil dibuat</string>
    <string name="error_name">Masukkan nama dulu ya</string>
    <string name="error_email">Masukkan email dulu ya</string>
    <string name="error_password">Masukkan password dulu ya</string>
    <string name="error_400">Input tidak valid</string>
    <string name="error_401">Wah akunnya gak ditemukan</string>
    <string name="time_at">pada</string>
    <string name="error_pass">Passwordnya terlalu pendek</string>
    <string name="password_hint">Masukkan password</string>
    <string name="story_hint">Tulis cerita anda</string>
    <string name="desc_camera">Tambah foto dari kamera</string>
    <string name="desc_folder">Tambah foto dari folder</string>
    <string name="upload">UPLOAD</string>
    <string name="permission_no_granted">Tidak mendapatkan permission!</string>
    <string name="succes_login">Login Berhasil</string>
    <string name="date">Diunggah pada %1$s</string>
    <string name="succes_upload">Cerita berhasil ditambahkan</string>
    <string name="retrofit_failed">Gagal instance Retrofit</string>
    <string name="post_warn">Lengkapi semua form terlebih dahulu</string>
    <string name="failed_take">Gagal mengambil gambar</string>
    <string name="language">Bahasa</string>

    <string name="created_at">Diupload pada %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_loading">Waduh! Ada masalah nih</string>
    <string name="refresh">Segarkan</string>
    <string name="input_error">Isi data terlebih dahulu</string>
    <string name="empty_map">Tema Default</string>
    <string name="empty_address">Alamat tidak ditemukan</string>
    <string name="location">Lokasi Anda (Opsional)</string>
    <string name="choose_item">Silahkan Pilih Item</string>
    <string name="camera_failed">Gagal membuka kamera</string>
    <string name="image_description">Gambar</string>
    <string name="splash">Splash Screen</string>
    <string name="image_welcome">Gambar landing</string>
    <string name="image_signup">Gambar SignUp</string>
    <string name="image_empty">Gambar error</string>
    <string name="empty_story">Tidak dapat ditemukan</string>
    <string name="photo_story">Gambar Story</string>
    <string name="captureimage">capture image</string>
    <string name="switchcamera">switch camera</string>
    <string name="imageView">Image Login</string>
    <string name="back" />
    <string name="title_activity_maps">MapsActivity</string>
    <string name="register">DAFTAR</string>
</resources>