<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_1"
    tools:context=".view.home.story.CreateStoryActivity">

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_story_image"
        android:layout_width="360dp"
        android:layout_height="260dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upload" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/open_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/desc_camera"
        android:elevation="20dp"
        android:src="@drawable/ic_camera"
        android:theme="@style/Theme.MaterialComponents"
        android:tint="@null"
        app:elevation="20dp"
        app:fabSize="mini"
        app:layout_constraintEnd_toStartOf="@+id/open_folder"
        app:layout_constraintTop_toTopOf="@+id/open_folder" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/open_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/desc_folder"
        android:src="@drawable/ic_folder"
        android:theme="@style/Theme.MaterialComponents"
        android:tint="@null"
        app:elevation="20dp"
        app:fabSize="mini"
        app:layout_constraintEnd_toStartOf="@+id/open_maps"
        app:layout_constraintTop_toTopOf="@+id/open_maps" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:hint="@string/location"
        app:layout_constraintBottom_toBottomOf="@+id/open_folder"
        app:layout_constraintEnd_toEndOf="@+id/iv_story_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_story_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_location"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="359dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/story_hint"
        app:layout_constraintEnd_toEndOf="@+id/iv_story_image"
        app:layout_constraintStart_toStartOf="@+id/iv_story_image"
        app:layout_constraintTop_toBottomOf="@+id/layout_location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/open_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/desc_folder"
        android:src="@drawable/ic_location"
        android:theme="@style/Theme.MaterialComponents"
        android:tint="@null"
        app:elevation="20dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/loadingProgress"
        app:layout_constraintEnd_toEndOf="@+id/layout_location"
        app:layout_constraintTop_toBottomOf="@+id/iv_story_image" />

    <Button
        android:id="@+id/upload_story"
        android:layout_width="146dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@color/blue_nav"
        android:gravity="center"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/layout_desc"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/layout_desc"
        app:layout_constraintTop_toBottomOf="@+id/layout_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>